navbar items to horizontal

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   /* border: 3px solid violet; */
   /* width: 100vw; */
-  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
