--- a/src/Components/Navbar/navBar.css
+++ b/src/Components/Navbar/navBar.css
@@ -9,13 +9,21 @@ nav {
   word-wrap: break-word;
   position: -webkit-sticky;
   position: sticky;
+  z-index: 1;
   bottom: 0px;
   background-color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.8em;
+  justify-content: space-around;
+  /* overflow: auto;
+  white-space: nowrap; */
 }
 
 a {
   text-decoration: none;
-  display: block;
+  /* display: block; */
+  display: inline-block;
   color: darkblue;
   font-size: 1rem;
   /* border: 1px solid green; */
