--- a/src/Components/SharedLayout/sharedLayout.css
+++ b/src/Components/SharedLayout/sharedLayout.css
@@ -5,9 +5,10 @@
   width: 100%;
   height: 4em;
   display: block;
-  position: -webkit-sticky;
+  /* position: -webkit-sticky;
   position: sticky;
-  top: 0;
+  top: 0; */
+  z-index: 1;
 }
 
 .sharedLayout-body {
