--- a/src/Components/Navbar/navBar.css
+++ b/src/Components/Navbar/navBar.css
@@ -3,12 +3,12 @@ nav {
   border-bottom: 1px solid black;
   border-top: 1px solid black;
   /* margin-bottom: 10px; */
-  padding: 0.3em;
-  /* width: 8em; */
+  padding: 0.5em 0em;
   text-align: center;
   word-wrap: break-word;
   position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
+  width: 100%;
   z-index: 1;
   bottom: 0px;
   background-color: #fff;
