--- a/src/Components/SharedLayout/sharedLayout.css
+++ b/src/Components/SharedLayout/sharedLayout.css
@@ -15,6 +15,8 @@
   /* border: solid green 1px; */
   background-color: yellow;
   width: 100%;
+  /* min-height: 100vh; */
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
+  align-items: center;
 }
