--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,35 @@
   flex-direction: column;
   align-items: center;
 }
+
+button {
+  outline: none;
+  padding: 6px 8px;
+  width: 60px;
+  height: 30px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.submit-button {
+  border: 0px;
+  background-color: darkblue;
+  color: white;
+}
+
+.remove-button {
+  background-color: white;
+  color: red;
+  border: 1px solid red;
+  margin-left: 5px;
+}
+
+.edit-button {
+  background-color: white;
+  color: darkblue;
+  border: 1px solid darkblue;
+}
+
+.addEdit-contact-btn {
+  margin-top: 10px;
+}
