contact style targeted for refactor

--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -1,5 +1,5 @@
 .contact-element {
-  border: 1px solid green;
+  border: 2px dotted green;
   margin-bottom: 10px;
   padding: 5px 10px;
   display: flex;
@@ -10,7 +10,7 @@
 }
 
 .contact-container {
-  /* border: 1px solid yellow; */
+  border: 2px dotted brown;
   padding: 10px 10px;
   display: flex;
   justify-content: space-between;
@@ -19,12 +19,13 @@
   /* border-bottom: 1px dotted black; */
 }
 
-/* .contact-buttons {
-  
-} */
+.contact-buttons {
+  border: 2px dotted blue;
+}
 
 .contact-info {
-  /* border: 1px solid orangered; */
+  border: 2px dotted orangered;
+
   display: flex;
   align-items: center;
   /* padding-bottom: 10px; */
@@ -34,7 +35,8 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 5px;
-  /* border: 1px solid purple; */
+  border: 2px dotted purple;
+
   border-top: 1px dotted black;
 }
 
