--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -1,26 +1,34 @@
 .contact-element {
   border: 2px dotted green;
+  border-radius: 10px;
   margin-bottom: 10px;
-  padding: 5px 10px;
+  /* padding: 5px 10px; */
+  padding: 5px 0px;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   border-bottom: 1px solid rgb(145, 144, 144);
+  min-height: 8rem;
   /* width: 90%; */
 }
 
 .contact-container {
   border: 2px dotted brown;
-  padding: 10px 10px;
+  /* padding: 10px 10px; */
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   width: 450px;
   /* border-bottom: 1px dotted black; */
 }
 
 .contact-buttons {
   border: 2px dotted blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  min-height: 8rem;
 }
 
 .contact-info {
