--- a/src/Pages/ContactList/contactsListPage.css
+++ b/src/Pages/ContactList/contactsListPage.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 60vw;
+  width: 90vw;
 }
 
 .contactList-page h3 {
@@ -16,5 +16,6 @@
   margin-bottom: 0.5rem;
   z-index: 1;
   position: sticky;
+  position: -webkit-sticky;
   top: 0;
 }
