--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,11 @@
 button {
   outline: none;
   padding: 6px 8px;
-  width: 60px;
-  height: 30px;
+  padding: 0.4rem 0.8rem;
+  /* width: 60px; */
+  width: 4rem;
+  /* height: 30px; */
+  height: 1.9rem;
   border-radius: 3px;
   cursor: pointer;
 }
@@ -26,7 +29,7 @@ button {
   background-color: white;
   color: red;
   border: 1px solid red;
-  margin-left: 5px;
+  /* margin-left: 5px; */
 }
 
 .edit-button {
