--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 button {
   outline: none;
-  padding: 6px 8px;
+  /* padding: 6px 8px; */
   padding: 0.4rem 0.8rem;
   /* width: 60px; */
   width: 4rem;
