--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -29,7 +29,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 2vh;
   height: 100%;
   width: 20%;
 }
@@ -39,7 +39,7 @@
   display: flex;
   align-items: center;
   /* padding: 0.7rem 0.9rem; */
-  padding: 1.2vw 2.2vw;
+  padding: 1.8vh 2.2vw;
   height: 25%;
   /* padding: 10px 5px; */
 }
@@ -52,6 +52,8 @@
   border-top: 1px dotted black;
   height: 75%;
   overflow: scroll;
+  padding: 1.8vh 2.2vw;
+  width: 100%;
 }
 
 .contact-icon {
@@ -69,4 +71,15 @@
 
 .contact-email {
   color: black;
+}
+
+.tag-wrapper {
+  font-size: 0.8rem;
+  /* border: 1px solid green; */
+  display: flex;
+  width: 30%;
+  height: 50%;
+  justify-content: flex-start;
+  align-items: center;
+  overflow-x: hidden;
 }
