--- a/src/Components/Navbar/navBar.css
+++ b/src/Components/Navbar/navBar.css
@@ -7,6 +7,7 @@ nav {
   word-wrap: break-word;
   position: fixed;
   width: 100%;
+  height: 5vh;
   z-index: 1;
   bottom: 0px;
   background-color: #fff;
@@ -14,6 +15,7 @@ nav {
   flex-wrap: wrap;
   gap: 0.8em;
   justify-content: space-around;
+  align-items: center;
   /* overflow: auto;
   white-space: nowrap; */
 }
