--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -36,6 +36,7 @@
 
 .contact-info {
   /* border: 2px dotted orangered; */
+  font-size: 1rem;
   display: flex;
   align-items: center;
   /* padding: 0.7rem 0.9rem; */
@@ -81,7 +82,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 8vw;
+  max-width: 9vw;
   height: 4vh;
   /* overflow-x: hidden; */
   /* overflow: hidden; */
