--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -1,61 +1,73 @@
-.contact-element {
-  border: 1px solid darkblue;
-  border-radius: 10px;
-  margin-bottom: 10px;
-  /* padding: 5px 10px; */
-  /* padding: 5px 0px; */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  /* border-bottom: 1px solid rgb(145, 144, 144); */
-  /* min-height: 8rem; */
-  height: 25vh;
-  width: 80vw;
-}
-
 .contact-container {
-  /* border: 2px dotted brown; */
-  /* padding: 10px 10px; */
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 64vw;
-  /* border-bottom: 1px dotted black; */
+  /* border: 1px dotted red; */
+  width: 80%;
+  margin-bottom: 0.5rem;
+  padding: 0.75rem 1rem;
 }
 
-.contact-buttons {
-  border-left: 1px solid darkblue;
+.contact-upper-side {
+  border: 1px solid darkblue;
+  background-color: #fff;
+  border-radius: 10px 10px 0 0;
+  width: 90%;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  gap: 2vh;
-  height: 100%;
-  width: 16vw;
+  justify-content: space-between;
+  margin: 0 auto 0 auto;
+  min-height: 4.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.contact-lower-side {
+  border: 1px solid darkblue;
+  background-color: #fff;
+  margin-top: -0.5rem;
+  border-radius: 10px;
+  min-height: 6rem;
+  /* box-shadow: 0px 8px 5px -4px #ccc; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .contact-info {
-  /* border: 2px dotted orangered; */
+  /* border: 1px solid orangered; */
+  width: 80%;
+  /* max-width: 80%; */
   font-size: 1rem;
   display: flex;
   align-items: center;
-  /* padding: 0.7rem 0.9rem; */
-  padding: 1.8vh 2.2vw;
-  height: 25%;
-  /* padding: 10px 5px; */
+  padding: 0.75rem 1rem;
+}
+
+.name-mail-container {
+  /* border: 1px solid brown; */
+  width: 90%;
+}
+
+.contact-buttons {
+  /* border: 1px solid greenyellow; */
+  width: 20%;
+  /* padding: 0.75rem 1rem; */
+  /* display: flex; */
+  /* justify-content: space-between; */
+  /* flex-wrap: wrap; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* gap: 2vh; */
+  /* height: 100%; */
+  /* width: 16vw; */
 }
 
 .contact-tags {
+  /* border: 1px solid purple; */
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5vw;
-  margin-top: 0.3rem;
-  /* border: 2px dotted purple; */
-  border-top: 1px dotted black;
-  height: 75%;
-  overflow: scroll;
-  padding: 1.8vh 2.2vw;
-  width: 59.6vw;
+  gap: 0.5rem;
+  width: 80%;
+  padding: 0.75rem 1rem;
+  /* margin: 0 auto; */
+  /* height: 100%; */
+  /* overflow: scroll; */
 }
 
 .contact-icon {
@@ -68,11 +80,17 @@
 
 .contact-name {
   font-weight: bold;
-  margin-bottom: 5px;
+  width: 95%;
+  margin-bottom: 0.31rem;
+  overflow-x: hidden;
+  /* word-wrap: break-words; */
+  /* margin-bottom: 5px; */
 }
 
 .contact-email {
   color: black;
+  width: 95%;
+  overflow-x: hidden;
 }
 
 .tag-wrapper {
@@ -82,9 +100,8 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  max-width: 9vw;
-  height: 4vh;
-  /* overflow-x: hidden; */
-  /* overflow: hidden; */
-  padding: 0 1.5vw;
+  max-width: 2.2rem;
+  height: 1.5rem;
+  padding: 0 0.75rem;
+  overflow: hidden;
 }
