tags page layout edited

--- a/src/Pages/ContactList/contactsListPage.css
+++ b/src/Pages/ContactList/contactsListPage.css
@@ -9,8 +9,9 @@
 
 .contactList-page h3 {
   font-size: 1.4rem;
-  border: 1px solid green;
+  /* border: 1px solid green; */
   color: darkorange;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   text-align: center;
   background-color: #fff;
