--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -25,7 +25,7 @@
   border-radius: 10px;
   min-height: 6rem;
   /* box-shadow: 0px 8px 5px -4px #ccc; */
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 -4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .contact-info {
@@ -100,6 +100,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  min-width: 2rem;
   max-width: 2.2rem;
   height: 1.5rem;
   padding: 0 0.75rem;
