--- a/src/Components/Tag/tag.css
+++ b/src/Components/Tag/tag.css
@@ -1,1 +1,25 @@
-/* hi */
+.tag-container {
+  border: 1px solid darkblue;
+  border-radius: 10px;
+  width: 90%;
+  padding: 0.75rem 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.tag-info-container {
+  font-size: 0.8rem;
+  border-radius: 0 0.5rem 0.5rem 0;
+  color: #fff;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 2rem;
+  max-width: 2.2rem;
+  height: 1.5rem;
+  padding: 0 0.75rem;
+  overflow: hidden;
+}
