--- a/src/Pages/Tags/tagsPage.css
+++ b/src/Pages/Tags/tagsPage.css
@@ -1,5 +1,5 @@
 .tagsPage {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,17 +37,20 @@
 .tags-controlPanel {
   width: 80%;
   padding: 0.75rem 1rem;
-  border: 1px solid darkblue;
-  border-top: none;
-  border-radius: 0 0 10px 10px;
   margin-bottom: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .tags-container {
-  /* border: 1px solid green; */
+  border-bottom: 1px solid rgb(131, 130, 130);
 }
 .tags-controlPanel {
   /* border: 1px solid brown; */
+  border: 1px solid darkblue;
+  border-top: none;
+  border-radius: 0 0 10px 10px;
 }
 
 .sub-headline {
@@ -55,5 +58,6 @@
   text-align: center;
   font-size: 1.2rem;
   font-weight: bold;
-  margin-top: 0.75rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
