--- a/src/App.css
+++ b/src/App.css
@@ -9,33 +9,38 @@
 
 button {
   outline: none;
-  /* padding: 6px 8px; */
-  padding: 0.4rem 0.8rem;
-  /* width: 60px; */
-  width: 4rem;
-  /* height: 30px; */
-  height: 1.9rem;
+  /* padding: 0.4rem 0.8rem; */
+  /* width: 4rem; */
+  /* height: 1.9rem; */
   border-radius: 3px;
   cursor: pointer;
 }
 
 .submit-button {
+  width: 4rem;
+  height: 1.9rem;
+  /* padding: 0.4rem 0.8rem; */
   border: 0px;
   background-color: darkblue;
   color: white;
 }
 
-.remove-button {
+.remove-button,
+.edit-button {
+  font-size: 1.2rem;
+  width: 1.5rem;
+  height: 1.5rem;
   background-color: white;
+  border: none;
+  /* border: 1px solid black; */
+}
+
+.remove-button {
   color: red;
-  border: 1px solid red;
-  /* margin-left: 5px; */
 }
 
 .edit-button {
-  background-color: white;
   color: darkblue;
-  border: 1px solid darkblue;
 }
 
 .addEdit-contact-btn {
