--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -30,26 +30,29 @@
 
 .contact-info {
   /* border: 1px solid orangered; */
-  width: 80%;
-  /* max-width: 80%; */
+  /* width: 80%; */
+  max-width: 70%;
   font-size: 1rem;
   display: flex;
   align-items: center;
-  padding: 0.75rem 1rem;
+  /* padding: 0.75rem 1rem; */
+  padding: 0.75rem 0.5rem 0.75rem 1rem;
+  margin-left: 0.2rem;
 }
 
 .name-mail-container {
   /* border: 1px solid brown; */
-  width: 90%;
+  /* width: 90%; */
+  max-width: 70%;
 }
 
 .contact-buttons {
   /* border: 1px solid greenyellow; */
-  width: 20%;
+  width: 15%;
   /* padding: 0.75rem 1rem; */
-  /* display: flex; */
-  /* justify-content: space-between; */
-  /* flex-wrap: wrap; */
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   /* flex-direction: column; */
   /* align-items: center; */
   /* justify-content: center; */
