--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -9,7 +9,7 @@
   border: 1px solid darkblue;
   background-color: #fff;
   border-radius: 10px 10px 0 0;
-  width: 90%;
+  /* width: 95%; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -30,20 +30,21 @@
 
 .contact-info {
   /* border: 1px solid orangered; */
-  /* width: 80%; */
-  max-width: 70%;
+  width: 80%;
+  max-width: 80%;
   font-size: 1rem;
   display: flex;
   align-items: center;
   /* padding: 0.75rem 1rem; */
-  padding: 0.75rem 0.5rem 0.75rem 1rem;
+  padding: 0.75rem 0.1rem 0.75rem 0.5rem;
   margin-left: 0.2rem;
 }
 
 .name-mail-container {
   /* border: 1px solid brown; */
-  /* width: 90%; */
+  width: 70%;
   max-width: 70%;
+  overflow-wrap: break-word;
 }
 
 .contact-buttons {
@@ -74,11 +75,16 @@
 }
 
 .contact-icon {
-  border: 1px solid darkblue;
-  margin-right: 10px;
+  /* border: 1px solid darkblue; */
+  color: darkblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  margin-right: 0.7rem;
   border-radius: 50%;
-  width: 30px;
-  height: 30px;
+  width: 2rem;
+  height: 2rem;
 }
 
 .contact-name {
