--- a/src/Components/Tag/tag.css
+++ b/src/Components/Tag/tag.css
@@ -12,10 +12,11 @@
 
 .tag-info-container {
   font-size: 0.8rem;
-  border-radius: 0 0.5rem 0.5rem 0;
+  /* border-radius: 0 0.5rem 0.5rem 0; */
+  border-radius: 0.5rem;
   color: #fff;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   min-width: 2rem;
   max-width: 2.2rem;
