--- a/src/Components/Navbar/navBar.css
+++ b/src/Components/Navbar/navBar.css
@@ -1,31 +1,36 @@
 nav {
   /* border: 1px solid red; */
   border-top: 1px solid black;
-  /* margin-bottom: 10px; */
   padding: 0.5em 0em;
   text-align: center;
   word-wrap: break-word;
   position: fixed;
-  width: 100%;
-  height: 5vh;
-  z-index: 1;
   bottom: 0px;
+  z-index: 1;
+  width: 100vw;
+  height: 3rem;
   background-color: #fff;
   display: flex;
-  flex-wrap: wrap;
-  gap: 20vw;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  /* overflow: auto;
-  white-space: nowrap; */
 }
 
 a {
+  /* border: 1px solid green; */
   text-decoration: none;
-  /* display: block; */
   display: inline-block;
   color: darkblue;
   font-size: 1rem;
-  /* border: 1px solid green; */
   margin-bottom: 0.4em;
+}
+
+.active-link {
+  color: darkblue;
+  border-bottom: 1px solid darkorange;
+  padding-bottom: 0.3rem;
+}
+
+.disabled-nav-link {
+  text-decoration: line-through;
+  color: rgb(148, 147, 147);
 }
