--- a/src/Pages/AddEditContact/addEditContactPage.css
+++ b/src/Pages/AddEditContact/addEditContactPage.css
@@ -113,3 +113,16 @@
 .check-box-element input[type="checkbox"] {
   margin-right: 0.3rem;
 }
+
+@media screen and (min-width: 750px) {
+  .addEditContact-page {
+    /* border: 1px solid red; */
+    width: 60vw;
+    align-self: flex-end;
+  }
+
+  .addEditContact-page h3 {
+    width: 100vw;
+    align-self: flex-end;
+  }
+}
