--- a/src/Components/Navbar/navBar.css
+++ b/src/Components/Navbar/navBar.css
@@ -38,12 +38,23 @@ a {
 @media screen and (min-width: 750px) {
   nav {
     top: 10rem;
-    left: 8rem;
+    left: 5rem;
     width: 20vw;
     height: 20rem;
     flex-direction: column;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 3px;
+    /* justify-content: space-around; */
+    border: 1px solid rgb(131, 130, 130);
+    border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+
+  a {
+    font-size: 1.2rem;
+  }
+
+  .active-link {
+    color: darkblue;
+    font-weight: bold;
+    border-bottom: 2px solid darkorange;
   }
 }
