--- a/src/Pages/AddEditContact/addEditContactPage.css
+++ b/src/Pages/AddEditContact/addEditContactPage.css
@@ -92,10 +92,10 @@
 }
 
 .checkboxes-container {
-  border: 1px dotted rgb(104, 103, 103);
+  border: 1px solid rgb(104, 103, 103);
   /* width: 13rem; */
   width: 80%;
-  border-radius: 3px;
+  border-radius: 0 0 3px 3px;
   border-top: none;
   padding: 0.75rem;
   display: flex;
@@ -122,7 +122,12 @@
   }
 
   .addEditContact-page h3 {
-    width: 100vw;
-    align-self: flex-end;
+    display: none;
+    /* width: 100vw;
+    align-self: flex-end; */
+  }
+
+  .addEditContact-page form {
+    margin-top: 5.5rem;
   }
 }
