--- a/src/Pages/Tags/tagsPage.css
+++ b/src/Pages/Tags/tagsPage.css
@@ -117,10 +117,12 @@
     /* border: 1px solid red; */
     width: 60vw;
     align-self: flex-end;
+    margin-top: 4.5rem;
   }
 
   .tagsPage h3 {
-    width: 100vw;
-    align-self: flex-end;
+    display: none;
+    /* width: 100vw;
+    align-self: flex-end; */
   }
 }
