--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -50,10 +50,14 @@
 .contact-buttons {
   /* border: 1px solid greenyellow; */
   width: 15%;
+  height: 4rem;
   /* padding: 0.75rem 1rem; */
   display: flex;
   justify-content: center;
+  gap: 0.3rem;
+  align-items: center;
   flex-wrap: wrap;
+  margin-right: 0.2rem;
   /* flex-direction: column; */
   /* align-items: center; */
   /* justify-content: center; */
