--- a/src/Pages/Tags/tagsPage.css
+++ b/src/Pages/Tags/tagsPage.css
@@ -43,7 +43,8 @@
 
 .tags-container {
   border-bottom: 1px solid rgb(131, 130, 130);
-  padding: 0.75rem 1rem;
+  /* padding: 0.75rem 1rem; */
+  padding: 0.75rem 1rem 2rem 1rem;
 }
 .tags-controlPanel {
   /* border: 1px solid brown; */
@@ -59,9 +60,13 @@
   text-align: center;
   font-size: 1.2rem;
   font-weight: bold;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
+
+/* .addEdit-tag-headline {
+  margin-bottom: 2rem;
+} */
 
 .tagsPage-container form {
   /* border: 1px solid purple; */
@@ -112,12 +117,12 @@
   margin-top: 1.5rem;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 850px) {
   .tagsPage {
     /* border: 1px solid red; */
     width: 60vw;
     align-self: flex-end;
-    margin-top: 4.5rem;
+    margin-top: 4rem;
   }
 
   .tagsPage h3 {
