no cantact and no tag bux msgs added

--- a/src/Pages/ContactList/contactsListPage.css
+++ b/src/Pages/ContactList/contactsListPage.css
@@ -23,6 +23,12 @@
   top: 0;
 }
 
+.no-contact-msg {
+  margin-top: 2rem;
+  color: red;
+  font-style: italic;
+}
+
 @media screen and (min-width: 850px) {
   .contactList-page {
     /* border: 1px solid red; */
