--- a/src/Pages/ContactList/contactsListPage.css
+++ b/src/Pages/ContactList/contactsListPage.css
@@ -8,10 +8,11 @@
 }
 
 .contactList-page h3 {
+  border: 1px solid red;
   font-size: 1.4rem;
-  /* border: 1px solid green; */
   color: darkorange;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  text-align: center;
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   text-align: center;
   background-color: #fff;
@@ -20,7 +21,30 @@
   z-index: 1;
   position: sticky;
   position: -webkit-sticky;
+  top: 0; */
+}
+
+.contactList-navBar {
+  /* border: 1px solid green; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #fff;
+  padding: 0.5rem 0;
+  margin-bottom: 0.5rem;
+  z-index: 1;
+  position: sticky;
+  position: -webkit-sticky;
   top: 0;
+}
+
+.filter-section,
+.search-section {
+  border: 1px solid green;
+  width: 4rem;
 }
 
 .no-contact-msg {
@@ -31,18 +55,17 @@
 
 @media screen and (min-width: 850px) {
   .contactList-page {
-    /* border: 1px solid red; */
+    border: 1px solid red;
     width: 60vw;
     align-self: flex-end;
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
     /* padding-right: 15rem; */
     /* margin-right: 15rem; */
   }
 
-  .contactList-page h3 {
-    display: none;
-    /* width: 100vw;
-    align-self: flex-end; */
-    /* margin-right: 15rem; */
+  .contactList-navBar {
+    width: 117vw;
+    /* align-self: flex-end; */
+    /* align-self: flex-start; */
   }
 }
