--- a/src/Pages/ContactList/contactsListPage.css
+++ b/src/Pages/ContactList/contactsListPage.css
@@ -30,7 +30,8 @@
   width: 100%;
   height: 2rem;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 8vw;
   align-items: center;
   background-color: #fff;
   padding: 0.5rem 0;
@@ -43,8 +44,35 @@
 
 .filter-section,
 .search-section {
-  border: 1px solid green;
-  width: 4rem;
+  /* border: 1px solid green; */
+}
+
+.filter-section {
+  /* border: 1px solid brown; */
+  width: 15rem;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.search-section {
+  /* border: 1px solid darkorange; */
+  width: 13rem;
+  display: flex;
+  justify-content: center;
+}
+
+.search-section input {
+  width: 90%;
+  outline: none;
+  padding: 0.3rem 0.5rem;
+  border: 1px solid lightgray;
+  border-radius: 3px;
+  color: rgb(59, 59, 59);
+}
+
+.search-section input:focus {
+  border: 2px solid darkblue;
 }
 
 .no-contact-msg {
@@ -55,7 +83,7 @@
 
 @media screen and (min-width: 850px) {
   .contactList-page {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 60vw;
     align-self: flex-end;
     /* margin-top: 5rem; */
