--- a/src/Pages/ContactList/contactsListPage.css
+++ b/src/Pages/ContactList/contactsListPage.css
@@ -26,6 +26,8 @@
 
 .contactList-navBar {
   /* border: 1px solid green; */
+  font-size: 0.8rem;
+  color: violet;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 2rem;
@@ -42,24 +44,23 @@
   top: 0;
 }
 
-.filter-section {
-  /* border: 1px solid brown; */
-  width: 15rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-}
-
 .search-section {
   /* border: 1px solid darkorange; */
   width: 13rem;
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-left: 1rem;
+  height: 2rem;
+}
+
+.search-section p {
+  margin-right: 0.2rem;
 }
 
 .search-section input {
-  width: 90%;
+  width: 100%;
+  max-height: 100%;
   outline: none;
   padding: 0.3rem 0.5rem;
   border: 1px solid lightgray;
@@ -68,7 +69,26 @@
 }
 
 .search-section input:focus {
-  border: 2px solid darkblue;
+  border: 2px solid #4c9aff;
+}
+
+.filter-section {
+  /* border: 1px solid brown; */
+  width: 15rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 1rem;
+  height: 2rem;
+}
+
+.filter-section p {
+  margin-right: 0.2rem;
+  /* color: red; */
+}
+
+.react-selector {
+  font-size: 0.8rem;
 }
 
 .no-contact-msg {
@@ -91,5 +111,18 @@
     width: 117vw;
     /* align-self: flex-end; */
     /* align-self: flex-start; */
+  }
+
+  .search-section {
+    margin-left: 0;
+  }
+
+  .filter-section {
+    gap: 1rem;
+    margin-right: 1rem;
+  }
+
+  .filter-section p {
+    margin-right: 0.1rem;
   }
 }
