--- a/src/Pages/ContactList/contactsListPage.css
+++ b/src/Pages/ContactList/contactsListPage.css
@@ -27,7 +27,7 @@
 .contactList-navBar {
   /* border: 1px solid green; */
   font-size: 0.8rem;
-  color: violet;
+  /* color: violet; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 2rem;
