--- a/src/Pages/ContactList/contactsListPage.css
+++ b/src/Pages/ContactList/contactsListPage.css
@@ -5,6 +5,7 @@
   align-items: center;
   width: 100vw;
   margin-bottom: 3rem;
+  margin-top: 1rem;
 }
 
 .contactList-page h3 {
@@ -102,7 +103,7 @@
     /* border: 1px solid red; */
     width: 60vw;
     align-self: flex-end;
-    /* margin-top: 5rem; */
+    margin-top: 5rem;
     /* padding-right: 15rem; */
     /* margin-right: 15rem; */
   }
