minor change in mobile navbar

--- a/src/Components/Navbar/navBar.css
+++ b/src/Components/Navbar/navBar.css
@@ -26,6 +26,7 @@ a {
 
 .active-link {
   color: darkblue;
+  font-weight: bold;
   border-bottom: 1px solid darkorange;
   padding-bottom: 0.3rem;
 }
